* Finally, kill off the MODE errors and Stale data errors for cases where
  subintegration time is between 1 and 2 seconds long.  This enables 1 Hz
  resolution.
* Use openmp to parallelize common corner turners for VDIF
* Fix weights (and maybe more) for setups differing only by pcal setup (Adam)
* Defeat data "echoes" that that would occur on each scan start after files
  ran out of data

Version 2.1
~~~~~~~~~~~
* Version number change from 2.0.2 prior to tagging
* Tagging Version 2.1, May 4, 2012

Version 2.0.2
~~~~~~~~~~~~~
* Correctly scale cross-correlation amplitudes for pulsar binning when using Tsys>0 (accounts for varying # samples per bin c.f. nominal)
* Correctly scale LBA format visibilities, reducing the size of ACCOR corrections
* Fix bug when pulsar binning/gating and xmaclength > nfftchan
* Add collection of drive statistics to native Mark5
* guardns was incorrectly (overzealously) calculated in mpifxcorr
* "Mk5DataStream::calculateControlParams: bufferindex>=bufferbytes" bug fixed
* Low weight reads could result in uninitialized memory
* Streamstor XLRRead() bug work-around installed several places (read at position 0 before reading at position > 0)
* mpifxcorr terminates correctly for all short jobs - previously it hung for jobs with a number of subints between nCores and 4 x nCores
* multithread VDIF support enabled for nativemk5datastream (reading from a module) inclduing stripping of non-VDIF packets
* Add "FAKE" as new datastream type.  Results will be useless but benchmarking and bugfixing may benefit

Version 2.0.1, 2011 June 12
~~~~~~~~~~~~~~~~~~~~~~~~~~~
* Added new checkmpifxcorr utility
* Updates to phase cal extraction
* Added switched power detection (enable with TCAL FREQUENCY, optional line just above PHASE CAL INT (MHZ) ), currently only for mark5access based unpackers, and only works on 2-bit data.
* Fix parsing of mark5 directory files: stepping through extra parameters had a bug.